# emGraph

./: Benchmarking_data.xlsx  Book2(AutoRecovered).xlsx  Book3.xlsx  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Darkpool_CDA.sh  Darkpool_VM.sh  Dockerfile  Makefile  README.md  assistedmpc_offline.sh  auction.sh  bench.sh  cmake_install.cmake  dirigent_mpc.sh  dirigent_offline.sh  dirigent_online.sh  g1000_d1000_p0.json  g1000_d1000_p1.json  g1000_d1000_p2.json  g1000_d1000_p3.json  gdb-cert.crt  gdb-cert.key  graph_analysis.sh  newParty.sh  party.sh  run.sh  runWn.sh  temp.json  temp_p0.json  temp_p1.json  temp_p2.json  temp_p3.json
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/assistedMPC/: .offline_evaluator.cpp.swp  .offline_evaluator.h.swp  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  rand_gen_pool.cpp  sharing.h
src/asterisk/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/dirigent/: helpers.cpp  helpers.h  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h  types.cpp  types.h
src/emgraph/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h
src/grasp/: MEMORY_OPTIMIZATIONS.md  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/io/: netmp.h
(+86 files in other folders)
